syntax = "proto3";

message ChatInfo {
  string uuid = 1;         // optional
  string id = 2;
  string name = 3;
  int64 roomId = 4;
  int64 userId = 5;
  string message = 6;
  string url = 7;          // optional
  string type = 8;
  bool success = 9;        // optional
  string createdTime = 10;
}
